# Agentic-CV-Resume-Builder

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  main.py  packages.txt  pyproject.toml  requirements.txt  sync_cloud_to_local.py
.streamlit/: config.toml  secrets.toml.example
app/: main.py
app/ai_integration/: __init__.py  content_optimizer.py  groq_client.py
app/components/: __init__.py  interactive_section_manager.py  latex_editor.py  pdf_preview.py  section_manager.py  sidebar.py  tabbed_sidebar.py  visual_resume_builder.py
app/config/: settings.py
app/database/: connection.py  models.py  queries.py
app/latex_templates/: __init__.py  base_template.py
app/latex_templates/blocks/: __init__.py  certs.py  collaboration.py  education.py  experience.py  header.py  projects.py  research.py  skills.py  social_links.py  summary.py
app/utils/: auth.py  pdf_generator.py  validators.py
configs/: permissions.json
database/: init.sql
docs/: main.tex
