[project]
name = "agentic-cv-resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "groq>=0.31.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "streamlit-ace>=0.1.1",
    "streamlit-pdf-viewer>=0.0.26",
    "streamlit-sortables>=0.2.0",
]
